--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 		<link type="text/css" href="css/main.css" rel="stylesheet" />
 	</head>
 	<body>
+		<div class="svg"></div>
+		<div id="tooltip"></div>
 		<script type="text/javascript" src="vendor/d3.v3.min.js"></script>
-		<script type="text/javascript" src="vendor/gantt-chart-d3v2.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
