--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 				<a href="#" class="room-filter RECA" data-room="RECA">RECA</a>
 				<a href="#" class="room-filter REC1" data-room="REC1">REC1</a>
 				<a href="#" class="room-filter REC2" data-room="REC2">REC2</a>
+				<a href="#" class="room-filter ALL" data-room="ALL">ALL</a>
 			</div>
 		</div>
 		<div id="tooltip"></div>
